tmux: increase history size.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,11 +35,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# increase history
+set -g history-limit 5000
+
 # window notification
 setw -g monitor-activity on
 set -g visual-activity on
-
-
 
 
 ######################
