--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,20 +1,15 @@
-# hotkey: C-o
+# -- hotkey -----------------------------------------------
 set -g prefix C-o
 unbind C-o
 
-# quick pane cycling
-unbind ^O
-bind ^O select-pane -t :.+
 
-# split window with | and -
-unbind %
-bind-key | split-window -h
-bind-key - split-window -v
+# -- history ----------------------------------------------
 
-# reload configuration file
-bind r source-file ~/.tmux.conf
+set -g history-limit 5000
 
-# mouse control
+
+# -- mouse ------------------------------------------------
+
 bind m \
 	set -g mode-mouse on \;\
 	set -g mouse-select-window on \;\
@@ -28,60 +23,62 @@ bind M \
 	set -g mouse-select-window off \;\
 	display 'Mouse: OFF'
 
-# vim key binding
+
+# -- pane -------------------------------------------------
+
+# pane quick cycling
+unbind ^O
+bind ^O select-pane -t :.+
+
+# pane navigation
 set-window-option -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# increase history
-set -g history-limit 5000
+# pane resizing
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
+
+
+# -- shortcuts --------------------------------------------
+
+# reload configuration file
+bind r source-file ~/.tmux.conf
+
+
+# -- window -----------------------------------------------
+
+# window split
+unbind %
+bind-key | split-window -h
+bind-key - split-window -v
 
 # window notification
 setw -g monitor-activity on
 set -g visual-activity on
 
+# create session
+bind C-c new-session
 
-######################
-### DESIGN CHANGES ###
-######################
+# find session
+bind C-f command-prompt -p find-session 'switch-client -t %%'
 
-# panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
+# list session
+bind C-l command-prompt -p list-sessions
 
-## Status bar design
+# -- design -----------------------------------------------
+
 # status line
-#set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
 set -g status-interval 2
 
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
-
-#window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
-
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
-
-# Info on left (I don't have a session display for now)
+# info on left (I don't have a session display for now)
 set -g status-left ''
 
 # loud or quiet?
@@ -95,49 +92,12 @@ set -g default-terminal "screen-256color"
 
 # The modes {
 setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
-
-# }
-# The panes {
-
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
-
-# }
-# The statusbar {
 
 set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
-set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '[session: #S] #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
-
-# }
-# The messages {
-
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
-
-# }
